--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
                                                     <li class="@(ViewBag.SegundoNivel == "puestos" ? "current-page" : null )"><a href="@Url.Action("Index", "Puestos")">Puestos</a></li>
                                                     <li class="@(ViewBag.SegundoNivel == "empleados" ? "current-page" : null )"><a href="@Url.Action("Index", "Empleados")">Empleados</a></li>
                                                 }
-                                                @if (User.IsInRole(TipoRoles.RH))
+                                                @if (User.IsInRole(TipoRoles.IT_MATRIZ_REQUERIMIENTOS_CREAR))
                                                 {
                                                     <h3>Requerimiento Usuarios</h3>
                                                     <li class="@(ViewBag.SegundoNivel == "ListadoUsuarios" ? "current-page" : null )"><a href="@Url.Action("ListadoUsuarios", "IT_matriz_requerimientos")">Crear Solicitud</a></li>
@@ -106,12 +106,23 @@
                                     @if (User.IsInRole(TipoRoles.IT_MATRIZ_REQUERIMIENTOS_AUTORIZAR))
                                     {
                                         <li class="@(ViewBag.PrimerNivel == "autorizar_matriz" ? "active" : null )">
-                                            <a><i class="fa fa-clipboard-user"></i>Requerimiento Usuarios<span class="fa fa-chevron-down"></span></a>
+                                            <a><i class="fa fa-clipboard-user"></i>Solicitudes Usuario<span class="fa fa-chevron-down"></span></a>
                                             <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "autorizar_matriz" ? "display:block" : null )">
-                                                    <h3>Solicitudes de Requerimientos</h3>
-                                                    <li class="@(ViewBag.SegundoNivel == "solicitudes_pendientes_autorizador" ? "current-page" : null )"><a href="@Url.Action("solicitudes_pendientes_autorizador", "IT_matriz_requerimientos")">Solicitudes Pendientes</a></li>
-                                                    <li class="@(ViewBag.SegundoNivel == "solicitudes_rechazadas_autorizador" ? "current-page" : null )"><a href="@Url.Action("solicitudes_rechazadas_autorizador", "IT_matriz_requerimientos")">Solicitudes Rechazadas</a></li>
-                                                    <li class="@(ViewBag.SegundoNivel == "solicitudes_autorizadas" ? "current-page" : null )"><a href="@Url.Action("solicitudes_autorizadas", "IT_matriz_requerimientos")">Solicitudes Autorizadas</a></li>
+                                                <h3>Solicitudes</h3>
+                                                <li class="@(ViewBag.SegundoNivel == "solicitudes_pendientes_autorizador" ? "current-page" : null )"><a href="@Url.Action("solicitudes_pendientes_autorizador", "IT_matriz_requerimientos")">Solicitudes Pendientes</a></li>
+                                                <li class="@(ViewBag.SegundoNivel == "solicitudes_rechazadas_autorizador" ? "current-page" : null )"><a href="@Url.Action("solicitudes_rechazadas_autorizador", "IT_matriz_requerimientos")">Solicitudes Rechazadas</a></li>
+                                                <li class="@(ViewBag.SegundoNivel == "solicitudes_autorizadas_autorizador" ? "current-page" : null )"><a href="@Url.Action("solicitudes_autorizadas_autorizador", "IT_matriz_requerimientos")">Solicitudes Autorizadas</a></li>
+                                            </ul>
+                                        </li>
+                                    }
+                                    @if (User.IsInRole(TipoRoles.IT_MATRIZ_REQUERIMIENTOS_CERRAR))
+                                    {
+                                        <li class="@(ViewBag.PrimerNivel == "sistemas" ? "active" : null )">
+                                            <a><i class="fa fa-computer"></i>Sistemas<span class="fa fa-chevron-down"></span></a>
+                                            <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "sistemas" ? "display:block" : null )">
+                                                <h3>Solicitudes RH</h3>
+                                                <li class="@(ViewBag.SegundoNivel == "solicitudes_usuarios_sistemas" ? "current-page" : null )"><a href="@Url.Action("solicitudes_sistemas", "IT_matriz_requerimientos")">RH - Solicitudes</a></li>
+
                                             </ul>
                                         </li>
                                     }
@@ -431,8 +442,8 @@
                                                 {
                                                     <h3>Centros de Costo</h3>
                                                     @*<li class="@(ViewBag.SegundoNivel == "actual" ? "current-page" : null )"><a href="@Url.Action("Actual", "ResponsableBudget")">ACT FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(-1)))</a></li>
-                        <li class="@(ViewBag.SegundoNivel == "forecast" ? "current-page" : null )"><a href="@Url.Action("Forecast", "ResponsableBudget")">FC FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))</a></li>
-                        <li class="@(ViewBag.SegundoNivel == "budget" ? "current-page" : null )"><a href="@Url.Action("Budget", "ResponsableBudget")">BG FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))</a></li>*@
+                                                        <li class="@(ViewBag.SegundoNivel == "forecast" ? "current-page" : null )"><a href="@Url.Action("Forecast", "ResponsableBudget")">FC FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))</a></li>
+                                                        <li class="@(ViewBag.SegundoNivel == "budget" ? "current-page" : null )"><a href="@Url.Action("Budget", "ResponsableBudget")">BG FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))</a></li>*@
                                                     <li class="@(ViewBag.SegundoNivel == "centros" ? "current-page" : null )"><a href="@Url.Action("Centros", "ResponsableBudget")">Mis Centros</a></li>
                                                 }
 
@@ -567,6 +578,7 @@
                     width: "500px",
                     "max-width": "500px"
                 }))
+
             });
 
         </script>
