--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoUsuarios.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoUsuarios.cshtml
@@ -135,12 +135,14 @@
                                             {
                                             <tr style="@(item.activo == false ? "color:red" :"" )">
                                                 <td>
-                                                    <a href="@Url.Action("Details", "empleados", new { id = item.id})" class="btn btn-info btn-sm" title="Detalles de empleado">
+                                                    <a  href="@Url.Action("Details", "empleados", new { id = item.id})" class="btn btn-info btn-sm" rel="tooltip" data-title="Detalles de empleado">
                                                         <i class="fa fa-info-circle"></i>
-                                                    </a>
-                                                    <a href="@Url.Action("CrearMatriz",ViewBag.ControllerName, new { id = item.id})" class="btn @(item.IT_matriz_requerimientos.Count == 0? "btn-primary":"btn-warning") btn-sm" title="@(item.IT_matriz_requerimientos.Count == 0? "Crear solicitud":"Modificación de Usuario")">
-                                                        <i class="fa fa-users"></i>
-                                                    </a>
+                                                    </a>                                                    
+                                                    <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title= "@(item.IT_matriz_requerimientos.Count != 0 && item.IT_matriz_requerimientos.FirstOrDefault().estatus != Bitacoras.Util.IT_MR_Status.FINALIZADO ? "Solicitud en proceso": null)" >
+                                                        <a href="@Url.Action("CrearMatriz",ViewBag.ControllerName, new { id = item.id})" class="btn @(item.IT_matriz_requerimientos.Count == 0 ? "btn-primary" : item.IT_matriz_requerimientos.FirstOrDefault().estatus == Bitacoras.Util.IT_MR_Status.FINALIZADO ? "btn-warning": "btn-secondary disabled") btn-sm" rel="tooltip" data-title="@(item.IT_matriz_requerimientos.Count == 0? "Crear solicitud":item.IT_matriz_requerimientos.FirstOrDefault().estatus == Bitacoras.Util.IT_MR_Status.FINALIZADO ? "Modificación de Usuario":"Solicitud en Proceso")">
+                                                            <i class="fa fa-users"></i>
+                                                        </a>
+                                                    </span>
                                                 </td>
                                                 <th>
                                                     @Html.DisplayFor(modelItem => item.numeroEmpleado)
@@ -216,6 +218,8 @@
                 "info": false
             });
 
+          
+
             // Initialize Select2 Elements (debe ir después de asignar el valor)
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
@@ -223,7 +227,7 @@
 
         });
 
-
+      
         //agranda el tamaño de la barra
         window.onload = function () {
             document.getElementById('menu_toggle').click();
